Submitting my last updates on udacity homework

--- a/Udacity homework/hw5/app.yaml
+++ b/Udacity homework/hw5/app.yaml
@@ -1,5 +1,4 @@
-# This file specifies runtime configuration, versions, URLS and such. 
-application: is-206test
+application: udacity-cs253
 version: 1
 runtime: python27
 api_version: 1
